Retail Lending-Production/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>A_C_in_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/C in Warehouse?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Associated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Associated</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property (Account Associated)</relationshipLabel>
        <relationshipName>Property1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <label>Acres</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anchor_Tenants__c</fullName>
        <label>Anchor Tenants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_ADR__c</fullName>
        <label>Annual ADR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Annual_Occupancy__c</fullName>
        <label>Avg Annual Occupancy %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bldg_Structures__c</fullName>
        <label># Bldg Structures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Builder_Contact_Email__c</fullName>
        <label>Builder Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Builder_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Class__c</fullName>
        <label>Building Class</label>
        <picklist>
            <picklistValues>
                <fullName>Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Condition__c</fullName>
        <label>Building Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Style__c</fullName>
        <label>Building Style</label>
        <picklist>
            <picklistValues>
                <fullName>Contemporary Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco &amp; Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco &amp; Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuscan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <inlineHelpText>ENTER THE NAME OF THE PERSON CREATING THIS DATA</inlineHelpText>
        <label>CREATED BY</label>
        <picklist>
            <picklistValues>
                <fullName>ANSARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHUMITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIKAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEETY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Types__c</fullName>
        <label>Care Types</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Care (CCRC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Day Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ceiling_Height__c</fullName>
        <label>Ceiling Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_of_property__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi &amp; NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClearSpan_or_Columns__c</fullName>
        <label>ClearSpan or Columns</label>
        <picklist>
            <picklistValues>
                <fullName>Clearspan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Pad_Notes__c</fullName>
        <label>Commercial Pad Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Phase__c</fullName>
        <label>Construction Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <picklist>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiltup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property (Contact Person)</relationshipLabel>
        <relationshipName>Property2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cross_Street__c</fullName>
        <label>Cross Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_TI__c</fullName>
        <label>Current TI</label>
        <picklist>
            <picklistValues>
                <fullName>White Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous TIs Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <description>Property development stage</description>
        <inlineHelpText>forthcoming- not launched for sale
prelaunch- soft launch &amp; sanctioned plans are pending
just launched -1 to 2 month of begining of sales 
ongoing - stage from launch till completion of the property.
completed- ready for possession &amp; beyond</inlineHelpText>
        <label>Development Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forthcoming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <label>Duplicate Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Electric_Amperage__c</fullName>
        <label>Electric Amperage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric__c</fullName>
        <label>Electric</label>
        <picklist>
            <picklistValues>
                <fullName>Separate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elevators_Freight__c</fullName>
        <label># Elevators (Freight)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elevators_Passenger__c</fullName>
        <label># Elevators (Passenger)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <picklist>
            <picklistValues>
                <fullName>Central Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardwood Floors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fireplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mature Trees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Large Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wired for Network</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fee_Simple_Ownership__c</fullName>
        <label>Fee Simple Ownership?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label># Floors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <label>Garage</label>
        <picklist>
            <picklistValues>
                <fullName>No Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car4+ Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ground_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Lease?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Separate_Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Separate Utilities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heat_in_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heat in Warehouse?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heated_Sq_Ft__c</fullName>
        <label>Heated Sq Ft</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Best_Suggested__c</fullName>
        <label>Highest &amp; Best Suggested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Franchise__c</fullName>
        <label>Hotel Franchise</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improved__c</fullName>
        <label>% Improved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Independent_House_Name__c</fullName>
        <formula>$RecordType.Name+Location__r.Name</formula>
        <label>Independent House Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Tenants__c</fullName>
        <label>Key Tenants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kitchen_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kitchen On Site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Paid_Utilites__c</fullName>
        <label>Landlord Paid Utilites</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garbage Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loading_Dock_Height__c</fullName>
        <label>Loading Dock Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loading_Docks__c</fullName>
        <label># Loading Docks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>Enter the loan amount</description>
        <inlineHelpText>Enter the amount for Loan &quot;Eg:Rs 500000&quot;.</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Bank__c</fullName>
        <description>Choose the bank name</description>
        <inlineHelpText>Choose the Current Bank from the list.</inlineHelpText>
        <label>Loan Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Indian Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Baroda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Maharastra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canara Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dena Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Overseas Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oriental Bank of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab National Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndicate Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCO Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Union Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vijaya Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Bank of Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Bank of Mysore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Union Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshmi Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indus Ind Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ING Vysya Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka Bank Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loans__c</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_type__c</fullName>
        <description>choose what type of loan it is?</description>
        <inlineHelpText>Choose the type of loan&quot;Eg:LAP,LRD&quot;.</inlineHelpText>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LRD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Locations__c</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Size_x__c</fullName>
        <label>Lot Size (?x?)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_on_Facility__c</fullName>
        <label>Notes on Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_Status__c</fullName>
        <label>Occupancy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Expiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month-to-Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>% Occupancy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Management?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Medical_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Medical Care?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outstanding_Principal__c</fullName>
        <description>Enter the Outstanding Principal Amount</description>
        <inlineHelpText>Enter the outstanding principal amount&quot;Eg:Rs 4000&quot;.</inlineHelpText>
        <label>Seller Outstanding Principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead_Door_Height__c</fullName>
        <label>Overhead Door Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overhead_Doors__c</fullName>
        <label># Overhead Doors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parcel_ID__c</fullName>
        <label>Parcel ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Spaces__c</fullName>
        <label># Parking Spaces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Types__c</fullName>
        <label>Parking Types</label>
        <picklist>
            <picklistValues>
                <fullName>Free Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite Only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pool_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The products of Retail lending</description>
        <inlineHelpText>Choose the product name Eg: Home Loan,Balance Transfer,etc.</inlineHelpText>
        <label>Select the Loan</label>
        <picklist>
            <controllingField>Property_use__c</controllingField>
            <picklistValues>
                <fullName>Home Loan / Property Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Balance Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property (BT / BTTP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rental Discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Selected ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan / Property Not Selected ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loan Balance Transfer ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan against property (BT / BTTP) ( C )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Rental Discounting ( C )</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Property</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Enter the project name</description>
        <inlineHelpText>Enter the project name:Eg:My homes&quot;.</inlineHelpText>
        <label>Tower Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_appr_banks__c</fullName>
        <description>Enter the bank name</description>
        <inlineHelpText>Enter the name of the Bank&quot;Eg:Axis Bank&quot;.</inlineHelpText>
        <label>Tower appr bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prop_Deviation_p__c</fullName>
        <label>Prop Deviation%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prop_Gated_Community__c</fullName>
        <description>Choose whether it is a gated community or not</description>
        <inlineHelpText>Choose whether  it is Gated Community&quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop Gated Community</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Mortgaged__c</fullName>
        <description>Choose seller is having the loan are not</description>
        <inlineHelpText>Choose whether seller has a loan &quot;Eg:Yes/No&quot;.</inlineHelpText>
        <label>Prop Mortgaged</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prop_Other_Costs__c</fullName>
        <label>Prop Other Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prop_Plot_size__c</fullName>
        <description>Enter the Size of the plot</description>
        <inlineHelpText>Enter the size of Plot &quot;Eg:250 Sft,300 Sft&quot;.</inlineHelpText>
        <label>Prop Plot size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prop_Purchase_Through__c</fullName>
        <label>Prop Purchase Through</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder Resale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller Resale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>